--- a/parallax website/src/styles.css
+++ b/parallax website/src/styles.css
@@ -2,8 +2,22 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins';
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
+}
+
+nav {
+    width: 100%;
+    position: absolute;
+    display: flex;
+    padding: 1rem 10rem;
+    justify-content: space-between;
+}
+
+nav a {
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 900;
 }
 
 .container {
@@ -20,7 +34,29 @@
 
 .main-title {
     position: absolute;
-    top: 50%;
+    top: 18%;
     left: 50%;
     transform: translate(-50%, 50%);
+    font-size: 7rem;
+}
+
+.content {
+    background-color: rgb(28, 28, 28);
+    min-height: 100vh;
+    z-index: 2;
+}
+
+.content-images {
+    min-height: 60vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.img {
+    text-align: center;
+}
+
+.text {
+    padding: 2rem 20rem;
 }
