--- a/parallax website/src/styles.css
+++ b/parallax website/src/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: "Poppins";
     color: white;
 }
 
@@ -27,7 +27,7 @@ nav a {
 .container img {
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     object-fit: cover;
     z-index: -1;
 }
@@ -41,6 +41,8 @@ nav a {
 }
 
 .content {
+    width: 100%;
+    position: absolute;
     background-color: rgb(28, 28, 28);
     min-height: 100vh;
     z-index: 2;
